# role_requirements

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/mlruns/858352113999888523/: meta.yaml
models/mlruns/858352113999888523/fb29c6da4a154598bce72d4e0ffa9f5c/: meta.yaml
models/mlruns/858352113999888523/fb29c6da4a154598bce72d4e0ffa9f5c/artifacts/: data.pkl
models/mlruns/858352113999888523/fb29c6da4a154598bce72d4e0ffa9f5c/metrics/: accuracy_score  f1_score  precision_score  recall_score
models/mlruns/858352113999888523/fb29c6da4a154598bce72d4e0ffa9f5c/tags/: mlflow.source.name
models/temp/: metrics.pkl  model.pkl
notebooks/: 00_exploration.ipynb  01_Preprocessing.ipynb  02_Analytics.ipynb  03_feature_engineering.ipynb  04_data_cleaning.ipynb  05_baseline.ipynb  06_models.ipynb  07_compare_models.ipynb  08_prediction.ipynb  09_simulation.ipynb  10_api_test.ipynb
scripts/: JobPrediction.py  JobPrediction_API.py  app.py
