[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "role_requirements"
version = "0.0.1"
description = "predicting roadmaps"
authors = [
  { name = "Esraa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["role_requirements"]
include = ["pyproject.toml", "role_requirements/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["role_requirements"]
force-sort-within-sections = true

